test_case/rust-lang_rust/53147_413011026_26.rs
\n\nYou can find more information about borrowing in the rust-book:\nhttp://doc.rust-lang.org/book/first-edition/references-and-borrowing.html\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/std-uncopyable-atomics.rs","byte_start":682,"byte_end":685,"line_start":21,"line_end":21,"column_start":13,"column_end":16,"is_primary":true,"text":[{"text":"    let x = *&x; //~ ERROR: cannot move out of borrowed content","highlight_stahich is a borrow of the content owned by the `RefCell`. To fix this error,\nyou have three choices:\n\n* Try to avoid moving the variable.\n* Somehow reclaim the ownership.\n* Implement the `Copy` trait on the type.\n\nExamples:\n\n